--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,8 +9,11 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$primario: #84d9bc;
+$primario: #171c26;
 $secundario: #313c4e;
-$secundarioOpacity: rgb(57 70 89 / 0.7);
-$negro: #000;
+$secundarioOpacity: #394659b3;
+$secundarioOpacityen: #394659b3;
+$negro: #171c26;
 $blanco: #ffffff;
+$ztooltip: 10;
+$zfixed: 100;
