--- a/src/scss/header/_breakpoints.scss
+++ b/src/scss/header/_breakpoints.scss
@@ -1,26 +1,8 @@
 @use "base/variables" as v;
 
-/*=============== BREAKPOINTS ===============*/
-
-/* For small devices */
-@media screen and (max-width: 340px) {
-  .container {
-    margin-inline: 1rem;
-  }
-
-  .nav__link {
-    padding-inline: 1rem;
-  }
-}
-
-/* For large devices */
 @media screen and (min-width: 1118px) {
-  .container {
-    margin-inline: auto;
-  }
-
   .nav {
-    height: calc(3.5rem + 2rem);
+    height: calc(v.$headerheight + 2rem);
     display: flex;
     justify-content: space-between;
 
@@ -55,7 +37,7 @@
       overflow: initial;
       position: absolute;
       left: 0;
-      top: calc((3.5rem) + 6rem);
+      top: 6rem;
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s, top 0.3s;
@@ -75,7 +57,7 @@
     // Show dropdown menu
     &__item:hover &__menu {
       opacity: 1;
-      top: calc(3.5rem + 5.5rem);
+      top: 5.5rem;
       pointer-events: initial;
       transition: top 0.3s;
     }
