--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,18 +1,16 @@
 @use "base/variables" as v;
 
-/*=============== HEADER ===============*/
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
-  background-color: v.$primario;
+  background-color: v.$negro;
   box-shadow: 0 2px 16px hsla(220, 32%, 8%, 0.3);
-  z-index: v.$zfixed;
+  z-index: var(--z-fixed);
 }
 
 /*=============== NAV ===============*/
 .nav {
+  height: v.$headerheight;
+
   &__logo,
   &__burger,
   &__close {
@@ -29,7 +27,7 @@
     display: inline-flex;
     align-items: center;
     column-gap: 0.25rem;
-    font-weight: --font-semi-bold;
+    font-weight: v.$fontsemibold;
     // Color highlighting when pressed on mobile devices
     // -webkit-tap-highlight-color: transparent;
 
@@ -80,11 +78,10 @@
       padding-top: 1rem;
     }
   }
-
   &__link {
     color: v.$blanco;
     background-color: v.$negro;
-    font-weight: --font-semi-bold;
+    font-weight: v.$fontsemibold;
     padding: 1.25rem 1.5rem;
     display: flex;
     justify-content: space-between;
@@ -92,7 +89,7 @@
     transition: background-color 0.3s;
 
     &:hover {
-      background-color: v.$secundarioOpacity;
+      background-color: v.$secundario;
     }
   }
 }
@@ -129,11 +126,11 @@
   &__sublink {
     padding: 1.25rem 1.25rem 1.25rem 2.5rem;
     color: v.$blanco;
-    background-color: v.$secundarioOpacity;
+    background-color: v.$negro;
     display: flex;
     align-items: center;
     column-gap: 0.5rem;
-    font-weight: --font-semi-bold;
+    font-weight: v.$fontsemibold;
     transition: background-color 0.3s;
 
     & i {
@@ -141,7 +138,7 @@
       font-weight: initial;
     }
     &:hover {
-      background-color: v.$negro;
+      background-color: v.$secundario;
     }
   }
   &__menu,
@@ -168,6 +165,6 @@
     margin-left: auto;
   }
   &__sublink {
-    background-color: v.$secundarioOpacityen;
+    background-color: v.$negro;
   }
 }
