First part ready

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -22,6 +22,7 @@ $fontsemibold: 600;
 $blackcolorlighten: #252b37;
 $normalfontsize: 0.953rem;
 $bodycolor: #f0f5ff;
+$separacion: 3.12rem;
 
 @media screen and (min-width: 1024px) {
   $normalfontsize: 1rem;
