--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -9,7 +9,7 @@
 body {
   font-family: v.$fuente_principal;
   font-size: v.$normalfontsize;
-  background-color: v.$bodycolor;
+  line-height: 1.4;
 }
 
 ul {
@@ -20,6 +20,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: v.$blanco;
 }
 
 .container {
@@ -28,7 +29,7 @@ a {
   margin: 0 auto;
 }
 
-img {
+.logo {
   width: 100px;
   height: 50px;
   margin: 0 auto;
