--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,9 +9,9 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$primario: #171c26;
-$secundario: #313c4e;
-$secundarioOpacity: #394659b3;
+$primario: #609966;
+$secundario: #9dc08b;
+$secundarioOpacity: #edf1d6;
 $secundarioOpacityen: #394659b3;
 $negro: #171c26;
 $blanco: #ffffff;
