--- a/src/scss/ui/_index.scss
+++ b/src/scss/ui/_index.scss
@@ -1,6 +1,8 @@
 @forward "swiper";
 @forward "inicio";
 @forward "sectores";
+@forward "sectores-inicio";
 @forward "conceptos";
+@forward "conceptos-inicio";
 @forward "productos";
 @forward "contacto";
