--- a/src/scss/ui/_contacto.scss
+++ b/src/scss/ui/_contacto.scss
@@ -4,11 +4,11 @@
 .contacto {
   &__heading {
     text-align: center;
-    margin: 1rem 0;
+    margin-top: 2rem;
   }
 
   &__formulario {
-    max-width: 850px;
+    max-width: 1050px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
@@ -16,7 +16,7 @@
     text-align: center;
     background-color: #fff;
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
-    margin: 2rem auto;
+    margin: 3rem auto;
   }
 
   &__imagen {
