--- a/src/scss/ui/_contacto.scss
+++ b/src/scss/ui/_contacto.scss
@@ -4,7 +4,8 @@
 .contacto {
   &__heading {
     text-align: center;
-    margin-top: 2rem;
+    color: v.$primario;
+    margin: 2rem 0;
   }
 
   &__formulario {
